# hybrid-crawler

./: README.md
crawler_control_open_loop/maestro_bridge/: maestro.yaml  maestro_yaml_addition.txt
crawler_control_open_loop/maestro_bridge_updated/: maestro_bridge.py
crawler_control_open_loop/src/crawler_bringup/: package.xml  setup.py
crawler_control_open_loop/src/crawler_bringup/config/: maestro.yaml
crawler_control_open_loop/src/crawler_bringup/launch/: system_bringup.launch.py
crawler_control_open_loop/src/crawler_control/: package.xml  setup.cfg  setup.py
crawler_control_open_loop/src/crawler_control/crawler_control/: joint_controller.py  reached_from_commands.py  relay_goal_to_setpoint.py
crawler_control_open_loop/src/crawler_control/launch/: bringup.launch.py
crawler_control_open_loop/src/crawler_msgs/: CMakeLists.txt  package.xml
crawler_control_open_loop/src/crawler_msgs/action/: Locomotion.action
crawler_control_open_loop/src/crawler_msgs/msg/: JointSetpoint.msg
crawler_control_open_loop/src/crawler_tasks/: package.xml  setup.cfg  setup.py
crawler_control_open_loop/src/crawler_tasks/config/: gaits_phased.yaml
crawler_control_open_loop/src/crawler_tasks/crawler_tasks/: locomotion_task_server.py
crawler_control_open_loop/src/crawler_tasks/launch/: task_space.launch.py
crawler_models_and_controllers/contact_models/: README.md  package.xml  setup.py
crawler_models_and_controllers/contact_models/config/: contact_models.yaml
crawler_models_and_controllers/contact_models/contact_models/: cable_contact_model_node.py  soft_contact_model_node.py
crawler_models_and_controllers/contact_models/launch/: contact_models.launch.py
crawler_models_and_controllers/contact_models/resource/: contact_models
crawler_models_and_controllers/crawler_controllers/: README.md  package.xml  setup.cfg  setup.py
crawler_models_and_controllers/crawler_controllers/config/: all_controllers.yaml  cable_force_pid.yaml  pump_bangbang.yaml  pump_pid.yaml  soft_force_pid.yaml  soft_pressure_combiner.yaml
crawler_models_and_controllers/crawler_controllers/crawler_controllers/: pid.py
crawler_models_and_controllers/crawler_controllers/crawler_controllers/nodes/: cable_force_pid_node.py  pump_bangbang_controller.py  pump_pid_controller.py  soft_force_pid_node.py  soft_pressure_combiner_node.py
crawler_models_and_controllers/crawler_controllers/launch/: controllers_with_config.launch.py
crawler_models_and_controllers/crawler_controllers/resource/: crawler_controllers
crawler_models_and_controllers/deformation_model/: README.md  package.xml  setup.py
crawler_models_and_controllers/deformation_model/config/: deformation_model.yaml
crawler_models_and_controllers/deformation_model/deformation_model/: cable_ik_node.py  soft_forward_statics_node.py
crawler_models_and_controllers/deformation_model/launch/: deformation_model.launch.py
crawler_models_and_controllers/deformation_model/resource/: deformation_model
crawler_sensors/: README.md
crawler_sensors/sensor_fuser/: README.md  package.xml  setup.cfg  setup.py
crawler_sensors/sensor_fuser/config/: sensor_fuser.yaml
crawler_sensors/sensor_fuser/launch/: sensor_fuser.launch.py
crawler_sensors/sensor_fuser/resource/: sensor_fuser
crawler_sensors/sensor_fuser/sensor_fuser/: sensor_fuser_node.py
crawler_sensors/teensy_serial_bridge/: package.xml  setup.cfg  setup.py
crawler_sensors/teensy_serial_bridge/config/: teensy_serial_bridge.yaml
crawler_sensors/teensy_serial_bridge/launch/: teensy_serial_bridge.launch.py
crawler_sensors/teensy_serial_bridge/resource/: teensy_serial_bridge
crawler_sensors/teensy_serial_bridge/teensy_serial_bridge/: teensy_serial_bridge_node.py
