<?xml version="1.0"?>
<package format="3">
  <name>crawler_controllers</name>
  <version>0.3.0</version>
  <description>Controllers for cable-driven and soft arms.</description>

  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
