<?xml version="1.0"?>
<package format="3">
  <name>deformation_model</name>
  <version>0.2.0</version>
  <description>Cable IK and soft arm forward statics</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
