<?xml version="1.0"?>
<package format="3">
  <name>teensy_serial_bridge</name>
  <version>0.1.0</version>
  <description>Reads 18 pressure sensors from Teensy over USB and publishes ROS arrays.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
