<?xml version="1.0"?>
<package format="3">
  <name>crawler_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch for my robot (Arduino bridge + joint fanout + locomotion server).</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>crawler_control</exec_depend>
  <exec_depend>crawler_tasks</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
