<?xml version="1.0"?>
<package format="3">
  <name>crawler_control</name>
  <version>0.1.0</version>
  <description>Control fanout and serial bridge.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>crawler_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
