<?xml version="1.0"?>
<package format="3">
  <name>crawler_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages and actions for my robot.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
