<?xml version="1.0"?>
<package format="3">
  <name>crawler_tasks</name>
  <version>0.1.0</version>
  <description>Task-space locomotion action server with configurable gaits.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>crawler_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
